--- a/ufo-level-1/index.html
+++ b/ufo-level-1/index.html
@@ -121,7 +121,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script src="static/data/data.js" type="text/javascript"></script>
-    <script src="static/js/index.js" type="text/javascript"></script>
+    <script src="static/js/app.js" type="text/javascript"></script>
 
 </body>
 
